--- a/ten42/src/app.css
+++ b/ten42/src/app.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
 In NativeScript, the app.css file is where you place CSS rules that
 you would like to apply to your entire application. Check out
 http://docs.nativescript.org/ui/styling for a full list of the CSS
